src/scss/main.scss
$bg-gray: #D7D7D7;
$accent: #FF5722;
$orange: #ff5722;
$main-text: #5e5e5e;
$breakpoint-xs: 350px;
$breakpoint-sm: 768px;
$breakpoint-md: 1040px;

@mixin ob($size) {
  height: $size;
  width: $size;
}
@mixin big-pic($url, $size) {
  background: no-repeat center/$size url($url);
}

html {
  @media screen and (max-width: $breakpoint-md) {
    font-size: 12px;
  }
  @media screen and (max-width: $breakpoint-sm) {
    font-size: 10px;
  }
}
body {
  background-color: $bg-gray;
}
.container, .container-fluid {
  position: relative;
}
.slide {
  max-height: 100vh;
  height: 100vh;
  &.slide-1 {
    background: no-repeat center/cover url('/assets/ludzie-ziemia.png');
      @media screen and (max-width: $breakpoint-sm) {
        background-size: contain;
        background-position: center bottom;
      }
    .niebo {
     position: absolute;
     top: 0;
     left: 0;
     width: 50vw;
     height: 25vh;
     background: no-repeat center/cover url('/assets/niebo-crop.png'); 
     z-index: -10;
    }
    .cc-logo {
      width: 10rem;
      position: absolute;
      z-index: 1000;
      top: 3rem;
      right: 3rem;
      background: no-repeat center/contain url('/assets/cc-logo.png');
    }
    .t1 {
      margin-top: 7vh;
    }
    .t2 {
      margin-top: 20vh;
      .title-label {
        h1 {
          @media screen and (max-width: $breakpoint-sm) {
            font-size: 2rem;
          }
        }
      }
    }
    .wyslijemail {
      .title-label.sm h1 {
        @media screen and (max-width: $breakpoint-sm) {
          font-size: 3rem;
        }
      }
    }
    .ob {
      position: absolute;
    }
    .ob1 {
      left: 40%;
      top: 30px;
      @media screen and (max-width: $breakpoint-sm) {
        left: -10%;
      }
    }
    .ob2 {
      left: 80%;
    }
    .ob3 {
      top: 50vh;
      left: 60%;
    }
    .ob4 {
      top: 35vh;
      right: -10%;
    }
  }
  &.slide-2 {
    .pani {
      position: absolute;
      width: 40vw;
      height: 80vh;
      margin-top: 15vh;
      right: 8%;
      z-index: 5;
      background: no-repeat center/contain url('/assets/pani.png');
      @media screen and (max-width: $breakpoint-sm) {
        right: 0;
        height: 100%;
        width: 50vw;
        margin-top: 0;
      }
    }
    .tlo {
      position: absolute;
      left: 0;
      top: 10vh;
      height: 80vh;
      width: 66vw;
      background: no-repeat center/cover url('/assets/tlo.png');
    }
    .wyslij-email {
      position: absolute;
      left: 10%;
      bottom: 35%;
    }
    @media screen and (max-width: $breakpoint-sm) {
      .card {
        .card-body {
          padding: 1rem;
          .card-text {
            font-size: 1rem;
          }
        }
      } 
    }
    .t1 {
      margin-top: 5vh;
    }
    .t2 {
      margin-top: 5vh;
    }
    .ob-group {
      position: absolute;
      left: 60%;
      top: 10vh;
      height: 80vh;
      display: flex;
      flex-direction: column;
      justify-content: space-around;
      z-index: 30;
      @media screen and (max-width: $breakpoint-sm) {
        flex-direction: row;
        top: initial;
        bottom: 5%;
        left: 0;
        right: 0;
        height: initial;
      }
      .title-label > h1 {
        @media screen and (max-width: $breakpoint-sm) {
          font-size: 1rem;
        }
      }
    }
    .ob-md {
      @media screen and (max-width: $breakpoint-sm) {
        @include ob(10vh);
      }  
    }

    .container {
      z-index: 20;
    }
  }
  &.slide-4 {
    background: no-repeat center/cover url('/assets/ziemia.png');
    .okowizjer {
      position: absolute;
      right: 5%;
      height: 50%;
      width: 20%;
      top: 15%;
      background: no-repeat center/contain url('/assets/okowizjer.png');
    }
    .title-label {
      position: absolute;
      &.pulled {
        right: 25%;
        top: 30%;
        @media screen and (max-width: $breakpoint-sm) {
          left: 10%;
          right: initial;
        }
      }
      &.t1 {
        left: 10%;
        top: 10%;
      }
    }
    .card {
      width: initial;
      display: inline-block;
      position: relative;
      margin: 2rem 0;
      .card-body {
        .card-text {
          z-index: 30;
          font-size: 1.5rem;
          position: relative;
          font-family: 'Muli';
          strong {
            font-weight: 800;
          }
        }
      }
    }
    .series {
      position: absolute;
      bottom: 3rem;
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      width: 98%;
      justify-content: space-around;
      @media screen and (max-width: $breakpoint-sm) {
        flex-direction: column;
        flex-wrap: nowrap;
        padding: 0 2rem;

      }
    }
    .ob {
      position:absolute;
      top: -2rem;
      left: -2rem;
    }
  }
  &.slide-5 {
    background-color: #fff;
    height: initial;
    padding-top: 7rem;
    text-align: center;
    @media screen and (max-width: $breakpoint-sm) {
      padding-top: 2rem;
      padding-bottom: 3rem;
    }
    h1 {
      font: 800 3rem 'Muli', sans-serif;
      text-transform: uppercase;
    }
    a, a:visited, a:hover {
      color: #2A2A2A;
      text-decoration: underline;
    }
    p {
      font: 300 1.5rem 'Muli', sans-serif;
      text-transform: uppercase;
      strong {
        font-weight: 800;
      }
    }
    img {
      height: 5rem;
    }
  }
}
a, a:visited {
  &.wyslijemail {
    h1 {
      text-decoration: underline;
    }
  }
  h1, h2 {
    color: #000;
  }
}
.kropeczki {
  position: absolute;
  width: 4rem;
  height: 22rem;
  background: no-repeat center/contain url('/assets/kropki.png');
  z-index: 15;
  &.k1 {
    top: -10%;
    right: 15%;
  }
  &.k2 {
    bottom: -10%;
    left: 5%;
  }
}
.zagrozenia {
  .card, .obrazek {
    height: 30rem;
  }
  article {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    &:nth-child(even) {
      flex-direction: row-reverse;
    }
    @media screen and (max-width: $breakpoint-sm) {
      flex-direction: column !important;
    }
    div {
      width: 100%;
    }
  }
  .card {
    text-transform: uppercase;
    .card-body {
      display: flex;
      align-items: center;
      .card-title {
        font: 800 2rem/2 'Muli', sans-serif;
      }
    }
  }
  .obrazek {
    background-position: center center;
    background-size: contain;
    background-repeat: no-repeat;
    width: 100%;
    &.z1 { background-image: url('/assets/zagrozenia_1.jpg') }
    &.z2 { background-image: url('/assets/zagrozenia_2.jpg') }
    &.z3 { background-image: url('/assets/zagrozenia_3.jpg') }
    &.z4 { background-image: url('/assets/zagrozenia_4.jpg') }
    &.z5 { background-image: url('/assets/zagrozenia_5.jpg') }
  }
}
.ob {
  background-color: $accent;
  border-radius: 50%;
  &.ob-xl {
    @include ob(35vh);
  }
  &.ob-sm {
    @include ob(10vh); 
  }
  &.ob-md {
    @include ob(18vh);
  }
  &.ob-sm2 {
    @include ob(14vh);
  }
}
.title-label {
  z-index: 30;
  > h1 {
    display: inline-block;
    font-family: 'Muli', sans-serif;
    font-weight: 800;
    font-size: 3.5rem;
    margin: 0;
    position: relative;
    padding: 0.4rem 1rem;
    background-color: #fff;
    text-transform: uppercase;
    z-index: 30; 
    @media screen and (max-width: $breakpoint-xs) {
      font-size: 3rem;
    }
  }
  &.md > h1 {
    font-size: 2.3rem;
  }
  &.sm > h1 {
    font-size: 1.7rem;
  }
  &.pull-10 {
    @media screen and (min-width: $breakpoint-sm) {
      margin-left: -100px;
    }
  }
}
.card {
  width: 100%;
  border-radius: 0;
  &:not(.unclickable) {
    background: no-repeat url('/assets/click.svg');
    background-position: top right;
    background-color: #fff;
    background-size: 3rem;
    cursor: pointer;
    .card-body {
      text-decoration: underline;
    }
  }
  .card-body {
    padding: 1.25rem 3rem;
    @media screen and (max-width: $breakpoint-xs) {
      padding: 0.5rem 2rem;
    }
    .card-text {
      font: 1.3rem 'Open Sans', sans-serif;
      @media screen and (max-width: $breakpoint-xs) {
        font-size: 1rem;
      }
    }
  }
  .overlay-content {
    display: none;
  }
}
.overlay-wrapper {
  background-color: rgba(0,0,0,0.4);
  width: 100%;
  height: 100%;
  overflow: hidden;
  top:0;
  left:0;
  right: 0;
  bottom:0;
  display: none;
  position: fixed;
  z-index: 100;
}
.overlay {
  &.on {
    display: block;
    position: relative;
    font-size: 1.5rem;
    margin: 2rem auto;
    height: 70vh;
    z-index: 100;
    background-color: #fff;
    width: 50%;
    @media screen and (max-width: $breakpoint-sm) {
      width: 90%;
      height: 90vh;
    }
  }
  .container {
    padding: 4rem 2rem 10rem;
    z-index: 100;
    height: 100%;
    overflow-y: scroll;
  }
  .bar {
    background-color: #2A2A2A;
    display: flex;
    padding: 2rem 0;
    position: absolute;
    bottom: 0;
    z-index: 100;
    width: 100%;
    justify-content: space-evenly;
    a {
      display:block;
      width: 100%;
      background: no-repeat center/contain transparent;
      &:hover {
        text-decoration: none;
      }
    }
    .fb-sharelink {
      background-image: url('/assets/share.png')
    }
    .wyslijemail {
      background-image: url('/assets/email.png')
    }
    .stanowisko {
      background-image: url('/assets/longread.png')
    }
    .zamknij {
      background-image: url('/assets/close_btn.png')
    }
  }
}
footer {
    padding-top: 40px;
    padding-bottom: 40px;
    background-color: #fff;
    .row:first-child >div {
        //min-height: 230px;
        .socials-menu {
            margin: 0;
            padding: 0;
            list-style: none;
            li {
                display: inline-block;
                padding: 32px 12px;
                a {
                    transition: .2s ease-in-out;
                    color: #000;
                    &:hover {
                        color: $main-text;
                    }
                }
                i.fa {
                    font-size: 32px;
                }
            }
        }
    }
    hr {
        margin: 40px 0;
    }
    a {
        color: #5e5e5e;
        transition: .2s ease-in-out color;
        &:hover {
            color: $orange;
        }
    }
    h5 {
        font-weight: bold;
        font-size: 14px;
        margin-bottom: 8px;
        a {
            color: $main-text;
        }
    }
    p {
        color: #5e5e5e;
        font-size: 14px;
        font-weight: normal;
        white-space: normal;
    }
    
    img[alt='stgu'] {
        margin-top: 23px;
    }
    svg {
        height: 15px;
        width: 80px;
    }

    ul.temporary-menu {
        list-style: none;
        padding: 0;
        margin: 0;
        font-weight: normal;
        li {
            font-size: 14px;
            padding: 2px 0;
        }
    }
    .cc-box {
        svg {
            margin-top: 10px;
        }
    }
    .swiper-slide:not(:first-child) {
        display: none;
    }
}

